force-app/main/default/objects/Zentra_Email_Log__c/Zentra_Email_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for all emails sent by TruZentra. Records every send attempt, success/failure, recipient, and email type for compliance and debugging.</description>
    <label>Zentra Email Log</label>
    <nameField>
        <displayFormat>ELOG-{00000}</displayFormat>
        <label>Email Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zentra Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>