force-app/main/default/objects/Zentra_Email_Log__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account (customer) this email was sent for.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zentra Email Logs</relationshipLabel>
    <relationshipName>Zentra_Email_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>