force-app/main/default/objects/Zentra_Email_Log__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <description>Type of email sent (Balance Summary, Dispute Confirmation, Loan Restructuring).</description>
    <label>Email Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>