force-app/main/default/objects/Zentra_Email_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error details if the email failed to send.</description>
    <label>Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>