force-app/main/default/objects/Zentra_Email_Log__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>Email address the message was sent to.</description>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>