force-app/main/default/objects/Zentra_Email_Log__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject line of the email sent.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>