force-app/main/default/objects/Zentra_Email_Log__c/listViews/Zentra_All_Email_Log.listView-meta.xml
<ListView>
    <fullName>Zentra_All_Email_Log</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Customer__c</columns>
    <columns>Email_Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Email Log</label>
</ListView>